objects/Tour_Template__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SecurityCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SecurityChecks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tour_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour Package</label>
        <referenceTo>Tour_Package__c</referenceTo>
        <relationshipLabel>Tour Templates</relationshipLabel>
        <relationshipName>Tour_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>allowedReferences__c</fullName>
        <label>allowedReferences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Tour Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tour Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tour Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>